# oxen-encoding

./: .clang-format  .drone.jsonnet  CMakeLists.txt
debian/: changelog  control  gbp.conf  rules
oxenc/: base32z.h  base64.h  bt_common.h  bt_producer.h  bt_serialize.h  bt_value.h  byte_type.h  common.h  endian.h  hex.h  rlp_serialize.h  span.h
tests/: CMakeLists.txt  common.h  endian-testing.cpp  test_bt.cpp  test_encoding.cpp  test_endian.cpp  test_rlp.cpp
utils/: format.sh
